# vantix

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LOOKUP.md  MEM.md  PLAN2.md  README.md  USAGE.md  WINDOWS.md  ctfvpn_loop.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent_ops/: README.md
agent_ops/bugbounty/: tools_installed.yaml
agent_ops/config/: cracking_nodes.example.yaml  targets.example.yaml  targets.yaml  tool_registry.yaml  tool_suites.yaml
agent_ops/templates/: report_template.md  (+1 more)
agent_skills/: registry.yaml
alembic/: env.py
ctf_secops_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: BENCHMARKS.md  api.md  architecture.md  browser_agent.md  browser_artifacts.md  browser_authenticated_testing.md  browser_policies.md  capability-matrix.md  checkpoints.md  configuration.md  coverage_matrix.md  cve_mcp.md  developer-guide.md  development.md  getting-started.md  installation.md  local_topology.example.md  memory.md  observability.md  operator-guide.md  orchestration.md  permissions.md  platform_architecture.md  positioning.md  public-case-studies.md  security-and-safety.md  testing-modes.md  testing.md  testing_matrix.md  upstream_feature_matrix.md  vantix_ui.md  worker_runtime.md  workflow-engine.md  workflow_engine.md  xbow-evaluation.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
methods/: README.md
runbooks/: workflow.md
scripts/: Check-Prereqs.ps1  Connect-VPN.ps1  Enter-CTF.ps1  Monitor-VPN.ps1  New-Target.ps1  Quick-Recon-Prep.ps1  Start-CTF.ps1  backfill-cve-intel.sh  bench-portmap-generate.py  binary-re.sh  bugbounty-hunter.sh  bugbounty-install.sh  bugbounty-probe.sh  bugbounty-recon.sh  bugbounty-report.sh  bugbounty-scope.sh  build-release.sh  check-all.sh  codex-close.sh  codex-memory-watch.sh  codex-start.sh  crack-dispatch.sh  crack-fetch-results.sh  crack-node-doctor.sh  crack-status.sh  densify-context.py  devwork-bench-expose.sh  devwork-bench-fix-legacy-apt.sh  devwork-bench-run-fixed.sh  doctor.sh  exploit-pipeline.sh  export-ctfgit-core.sh  fix-permissions.sh  flag-sweep.sh  install-cve-intel-timer.sh  install-vantix.sh  koth-claim-watch.sh  koth-continuity.sh  koth-loss-recover.sh  koth-opponent-watch.sh  (+45 more)
sdk/: pyproject.toml
sdk/vantix_sdk/: __init__.py
secops/: __init__.py  app.py  config.py  db.py  installer.py  middleware.py  mode_profiles.py  models.py  release_verify.py  schemas.py  security.py  updater.py  user_admin.py
tests/: conftest.py  test_api.py  test_auth_service.py  test_benchmarks.py  test_browser_agent.py  test_context_builder.py  test_dense_context.py  test_epss_adapter.py  test_installer_tools.py  test_intel_source_exploitdb.py  test_mode_profiles.py  test_phase_handlers.py  test_policies.py  test_reporting.py  test_resume_and_retry.py  test_skills.py  test_updater.py  test_vantix_chat.py  test_vantix_source.py  test_vuln_intel.py  test_workflow_engine.py
(+491 files in other folders)
