[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-secops-platform"
version = "0.1.0"
description = "Codex-native security operations platform for CTF, KoTH, pentest, and bug bounty workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "psycopg[binary]>=3.1.19,<4.0.0",
  "pgvector>=0.3.2,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "playwright>=1.49.0,<2.0.0",
  "mcp[cli]>=1.0.0,<2.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "alembic>=1.13.0,<2.0.0",
  "passlib[argon2]>=1.7.4,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
  "bandit>=1.7.9,<2.0.0",
]

[tool.setuptools.packages.find]
include = ["secops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 140
target-version = "py311"
exclude = ["tools", "frontend/dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "secops.services.workflows.*",
  "secops.services.worker_runtime",
  "secops.services.policies",
  "secops.services.reporting",
]
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "tools"]
skips = ["B101"]
