[project]
name = "vantix-sdk"
version = "0.1.0"
description = "Public interfaces for extending Vantix: Agent, Tool, Policy, Evidence."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Vantix" }]
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vantix_sdk"]
